fixed grid cut off

--- a/css/showcase.css
+++ b/css/showcase.css
@@ -79,6 +79,7 @@ html, body {
     flex-grow: 1;
     position: absolute;
     /* top: 0%; */
+    padding-bottom: 6%;
 }
 
 .skinSection {
